cmake_minimum_required(VERSION 3.28)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(leetcode_190 c++_leetode_first/leetcode_190.cpp)

add_executable(leetcde_191 c++_leetode_first/leetode_191.cpp)

add_executable(leetcode_198 c++_leetode_first/leetcode_198.cpp)
add_executable(leetcode_201 c++_leetode_first/leetcode_201.cpp)
add_executable(leetocode_204 c++_leetode_first/leetocode_204.cpp)
add_executable(leetcode_205 c++_leetode_first/leetcode_205.cpp)
add_executable(lcr_001 c++_leetode_first/lcr/lcr_001.cpp)
add_executable(leetcode_3180 c++_leetode_first/leetcode_3180.cpp)
add_executable(leetcode_3181 c++_leetode_first/leetcode_3181.cpp)
add_executable(leetcode_207 c++_leetode_first/acwing/leetcode_207.cpp)
add_executable(leetcode_208 c++_leetode_first/acwing/leetcode_208.cpp)
add_executable(leetcode209 c++_leetode_first/acwing/leetcode209.cpp)
add_executable(leetcode_210 c++_leetode_first/acwing/leetcode_210.cpp)
