cmake_minimum_required(VERSION 3.28)
project(leetcode)

if(MSVC)
    add_compile_options("/utf-8")
endif()

set(CMAKE_CXX_STANDARD 17)

# 添加子目录，构建 AVL 库
add_subdirectory(data_struct/AVL)
add_subdirectory(data_struct/BST)
add_subdirectory(data_struct/RBT)

add_executable(RBT_test data_struct/RBT.cpp)
target_link_libraries(RBT_test PRIVATE RBT)

ADD_executable(BST_test data_struct/test_BST.cpp)
target_link_libraries(BST_test PRIVATE BST)

add_executable(AVL_test data_struct/test_AVL.cpp)
target_link_libraries(AVL_test PRIVATE AVL)

add_executable(leetcode_190 c++_leetode_first/leetcode_190.cpp)
add_executable(leetcde_191 c++_leetode_first/leetode_191.cpp)
add_executable(leetcode_198 c++_leetode_first/leetcode_198.cpp)
add_executable(leetcode_201 c++_leetode_first/leetcode_201.cpp)
add_executable(leetocode_204 c++_leetode_first/leetocode_204.cpp)
add_executable(leetcode_205 c++_leetode_first/leetcode_205.cpp)
add_executable(lcr_001 c++_leetode_first/lcr/lcr_001.cpp)
add_executable(leetcode_3180 c++_leetode_first/leetcode_3180.cpp)
add_executable(leetcode_3181 c++_leetode_first/leetcode_3181.cpp)
add_executable(leetcode_207 c++_leetode_first/acwing/leetcode_207.cpp)
add_executable(leetcode_208 c++_leetode_first/acwing/leetcode_208.cpp)
add_executable(leetcode209 c++_leetode_first/acwing/leetcode209.cpp)
add_executable(leetcode_210 c++_leetode_first/acwing/leetcode_210.cpp)
add_executable(leetcode_211 c++_leetode_first/acwing/leetcode_211.cpp)
add_executable(leetcode_212 c++_leetode_first/acwing/leetcode_212.cpp)
add_executable(leetcode_684 c++_leetode_first/leetcode_684.cpp)
add_executable(leetcode_80 c++_leetode_first/leetcode_80.cpp)
add_executable(JZ18 c++_leetode_first/lcr/JZ18.cpp)
add_executable(JZ33 c++_leetode_first/lcr/JZ33.cpp)
add_executable(JZ35 c++_leetode_first/lcr/JZ35.cpp)
add_executable(JZ36 c++_leetode_first/lcr/JZ36.cpp)
add_executable(JZ37 c++_leetode_first/lcr/JZ37.cpp)
add_executable(JZ54 c++_leetode_first/lcr/JZ54.cpp)
add_executable(JZ76 c++_leetode_first/lcr/JZ76.cpp)
add_executable(JZ84 c++_leetode_first/lcr/JZ84.cpp)
add_executable(sort c++_leetode_first/排序/sort.cpp)
add_executable(sort_1 c++_leetode_first/排序/sort1.cpp)
add_executable(leetcode_215 c++_leetode_first/acwing/leetcode_215.cpp)
add_executable(leetcode_217 c++_leetode_first/acwing/leetcode_217.cpp)
add_executable(leetcode_218 c++_leetode_first/acwing/leetcode_218.cpp)
add_executable(leetcode_3211 c++_leetode_first/leetcode_3211.cpp)
add_executable(leetcode_219 c++_leetode_first/acwing/leetcode_219.cpp)
add_executable(leetcode_220 c++_leetode_first/acwing/leetcode_220.cpp)
add_executable(leetcode_3216 c++_leetode_first/leetcode_3216.cpp)
add_executable(lcr_120 c++_leetode_first/lcr/lcr_120.cpp)
add_executable(lcr_121 c++_leetode_first/lcr/lcr_121.cpp)
add_executable(leetcode_122 c++_leetode_first/lcr/leetcode_122.cpp)
add_executable(LCR_123 c++_leetode_first/lcr/LCR_123.cpp)
add_executable(LCR_124 c++_leetode_first/lcr/LCR_124.cpp)
add_executable(LCR_125 c++_leetode_first/lcr/LCR_125.cpp)
add_executable(LCR_126 c++_leetode_first/lcr/LCR_126.cpp)
add_executable(LCR_127 c++_leetode_first/lcr/LCR_127.cpp)
add_executable(LCR_128 c++_leetode_first/lcr/LCR_128.cpp)
add_executable(LCR_129 c++_leetode_first/lcr/LCR_129.cpp)
add_executable(LCR_130 c++_leetode_first/lcr/LCR_130.cpp)
add_executable(leetcode_633 c++_leetode_first/leetcode_633.cpp)
add_executable(LCR_131 c++_leetode_first/lcr/LCR_131.cpp)
add_executable(LCR_133 c++_leetode_first/lcr/LCR_133.cpp)
add_executable(LCR_134 c++_leetode_first/lcr/LCR_134.cpp)
add_executable(leetcode994 c++_leetode_first/hot100/leetcode994.cpp)
add_executable(leetcode_704 c++_leetode_first/代码随想录/leetcode_704.cpp)
add_executable(leetcode_148 c++_leetode_first/acwing/leetcode_148.cpp)
