cmake_minimum_required(VERSION 3.28)
project(leetcode)

if (MSVC)
    add_compile_options("/utf-8")
endif ()

set(CMAKE_CXX_STANDARD 17)

# 添加子目录，构建 AVL 库
add_subdirectory(data_struct/AVL)
add_subdirectory(data_struct/BST)
add_subdirectory(data_struct/RBT)

add_executable(RBT_test data_struct/RBT.cpp)
target_link_libraries(RBT_test PRIVATE RBT)

ADD_executable(BST_test data_struct/test_BST.cpp)
target_link_libraries(BST_test PRIVATE BST)

add_executable(AVL_test data_struct/test_AVL.cpp)
target_link_libraries(AVL_test PRIVATE AVL)

add_executable(leetcode_190 c++_leetode_first/leetcode_190.cpp)
add_executable(leetcde_191 c++_leetode_first/leetode_191.cpp)
add_executable(leetcode_198 c++_leetode_first/leetcode_198.cpp)
add_executable(leetcode_201 c++_leetode_first/leetcode_201.cpp)
add_executable(leetocode_204 c++_leetode_first/leetocode_204.cpp)
add_executable(leetcode_205 c++_leetode_first/leetcode_205.cpp)
add_executable(lcr_001 c++_leetode_first/lcr/lcr_001.cpp)
add_executable(leetcode_3180 c++_leetode_first/leetcode_3180.cpp)
add_executable(leetcode_3181 c++_leetode_first/leetcode_3181.cpp)
add_executable(leetcode_207 c++_leetode_first/acwing/leetcode_207.cpp)
add_executable(leetcode_208 c++_leetode_first/acwing/leetcode_208.cpp)
add_executable(leetcode209 c++_leetode_first/acwing/leetcode209.cpp)
add_executable(leetcode_210 c++_leetode_first/acwing/leetcode_210.cpp)
add_executable(leetcode_211 c++_leetode_first/acwing/leetcode_211.cpp)
add_executable(leetcode_212 c++_leetode_first/acwing/leetcode_212.cpp)
add_executable(leetcode_684 c++_leetode_first/leetcode_684.cpp)
add_executable(leetcode_80 c++_leetode_first/leetcode_80.cpp)
add_executable(JZ18 c++_leetode_first/lcr/JZ18.cpp)
add_executable(JZ33 c++_leetode_first/lcr/JZ33.cpp)
add_executable(JZ35 c++_leetode_first/lcr/JZ35.cpp)
add_executable(JZ36 c++_leetode_first/lcr/JZ36.cpp)
add_executable(JZ37 c++_leetode_first/lcr/JZ37.cpp)
add_executable(JZ54 c++_leetode_first/lcr/JZ54.cpp)
add_executable(JZ76 c++_leetode_first/lcr/JZ76.cpp)
add_executable(JZ84 c++_leetode_first/lcr/JZ84.cpp)
add_executable(sort c++_leetode_first/排序/sort.cpp)
add_executable(sort_1 c++_leetode_first/排序/sort1.cpp)
add_executable(leetcode_215 c++_leetode_first/acwing/leetcode_215.cpp)
add_executable(leetcode_217 c++_leetode_first/acwing/leetcode_217.cpp)
add_executable(leetcode_218 c++_leetode_first/acwing/leetcode_218.cpp)
add_executable(leetcode_3211 c++_leetode_first/leetcode_3211.cpp)
add_executable(leetcode_219 c++_leetode_first/acwing/leetcode_219.cpp)
add_executable(leetcode_220 c++_leetode_first/acwing/leetcode_220.cpp)
add_executable(leetcode_3216 c++_leetode_first/leetcode_3216.cpp)
add_executable(lcr_120 c++_leetode_first/lcr/lcr_120.cpp)
add_executable(lcr_121 c++_leetode_first/lcr/lcr_121.cpp)
add_executable(leetcode_122 c++_leetode_first/lcr/leetcode_122.cpp)
add_executable(LCR_123 c++_leetode_first/lcr/LCR_123.cpp)
add_executable(LCR_124 c++_leetode_first/lcr/LCR_124.cpp)
add_executable(LCR_125 c++_leetode_first/lcr/LCR_125.cpp)
add_executable(LCR_126 c++_leetode_first/lcr/LCR_126.cpp)
add_executable(LCR_127 c++_leetode_first/lcr/LCR_127.cpp)
add_executable(LCR_128 c++_leetode_first/lcr/LCR_128.cpp)
add_executable(LCR_129 c++_leetode_first/lcr/LCR_129.cpp)
add_executable(LCR_130 c++_leetode_first/lcr/LCR_130.cpp)
add_executable(leetcode_633 c++_leetode_first/leetcode_633.cpp)
add_executable(LCR_131 c++_leetode_first/lcr/LCR_131.cpp)
add_executable(LCR_133 c++_leetode_first/lcr/LCR_133.cpp)
add_executable(LCR_134 c++_leetode_first/lcr/LCR_134.cpp)
add_executable(leetcode994 c++_leetode_first/hot100/leetcode994.cpp)
add_executable(leetcode_704 c++_leetode_first/代码随想录/vector/leetcode_704.cpp)
add_executable(leetcode_148 c++_leetode_first/acwing/leetcode_148.cpp)
add_executable(leetcode_268 c++_leetode_first/acwing/leetcode_268.cpp)
add_executable(leetcode_273 c++_leetode_first/acwing/leetcode_273.cpp)
add_executable(leetcode_274 c++_leetode_first/acwing/leetcode_274.cpp)
add_executable(leetcode_275 c++_leetode_first/acwing/leetcode_275.cpp)
add_executable(leetcode_282 c++_leetode_first/acwing/leetcode_282.cpp)
add_executable(leetcode_287 c++_leetode_first/acwing/leetcode_287.cpp)
add_executable(leetcode_289 c++_leetode_first/acwing/leetcode_289.cpp)
add_executable(leetcode_290 c++_leetode_first/acwing/leetcode_290.cpp)
add_executable(kama_99 c++_leetode_first/代码随想录/graph_theory/kama_99.cpp)
add_executable(kama_100 c++_leetode_first/代码随想录/graph_theory/kama_100.cpp)
add_executable(kama_101 c++_leetode_first/代码随想录/graph_theory/kama_101.cpp)
add_executable(kama_102 c++_leetode_first/代码随想录/graph_theory/kama_102.cpp)
add_executable(kama_103 c++_leetode_first/代码随想录/graph_theory/kama_103.cpp)
add_executable(kama_110 c++_leetode_first/代码随想录/graph_theory/kama_110.cpp)
add_executable(leetcode_295 c++_leetode_first/acwing/leetcode_295.cpp)
add_executable(leetcode_299 c++_leetode_first/acwing/leetcode_299.cpp)
add_executable(leetcode_301 c++_leetode_first/acwing/leetcode_301.cpp)
add_executable(leetcode_303 c++_leetode_first/acwing/leetcode_303.cpp)
add_executable(leetcode_304 c++_leetode_first/acwing/leetcode_304.cpp)
add_executable(leetcode_306 c++_leetode_first/acwing/leetcode_306.cpp)
add_executable(leetcode_307 c++_leetode_first/acwing/leetcode_307.cpp)
add_executable(leetcode_310 c++_leetode_first/acwing/leetcode_310.cpp)
add_executable(kama_104 c++_leetode_first/代码随想录/graph_theory/kama_104.cpp)
add_executable(kama_105 c++_leetode_first/代码随想录/graph_theory/kama_105.cpp)
add_executable(kama_106 c++_leetode_first/代码随想录/graph_theory/kama_106.cpp)
add_executable(kama_107 c++_leetode_first/代码随想录/graph_theory/kama_107.cpp)
add_executable(kama_108 c++_leetode_first/代码随想录/graph_theory/kama_108.cpp)
add_executable(kama_109 c++_leetode_first/代码随想录/graph_theory/kama_109.cpp)
add_executable(kama_53 c++_leetode_first/代码随想录/graph_theory/kama_53.cpp)
add_executable(kama_53_kruskal c++_leetode_first/代码随想录/graph_theory/kama_53_kruskal.cpp)
add_executable(kama_117 c++_leetode_first/代码随想录/graph_theory/kama_117.cpp)
add_executable(kama_47 c++_leetode_first/代码随想录/graph_theory/kama_47.cpp)
add_executable(kama_47_dijkstra c++_leetode_first/代码随想录/graph_theory/kama_47_dijkstra.cpp)
add_executable(kama_94 c++_leetode_first/代码随想录/graph_theory/kama_94.cpp)
add_executable(kama_94_SPFA c++_leetode_first/代码随想录/graph_theory/kama_94_SPFA.cpp)
add_executable(kama_95_bellman_ford_DNWC c++_leetode_first/代码随想录/graph_theory/kama_95_bellman_ford_DNWC.cpp)
add_executable(kama_96 c++_leetode_first/代码随想录/graph_theory/kama_96.cpp)
add_executable(kama_97 c++_leetode_first/代码随想录/graph_theory/kama_97.cpp)
add_executable(kama_126_A_star c++_leetode_first/代码随想录/graph_theory/kama_126_A_star.cpp)
add_executable(leetcode_27 c++_leetode_first/代码随想录/vector/leetcode_27.cpp)
add_executable(leetcode_977 c++_leetode_first/代码随想录/vector/leetcode_977.cpp)
add_executable(leetcode_209 c++_leetode_first/代码随想录/vector/leetcode_209.cpp)
add_executable(leetcode_59 c++_leetode_first/代码随想录/vector/leetcode_59.cpp)
add_executable(leetcode_1768 c++_leetode_first/leetcode_75/leetcode_1768.cpp)
add_executable(leetcode_1071 c++_leetode_first/leetcode_75/leetcode_1071.cpp)
add_executable(lcr_135 c++_leetode_first/lcr/lcr_135.cpp)
add_executable(lcr_136 c++_leetode_first/lcr/lcr_136.cpp)
add_executable(lcr_137 c++_leetode_first/lcr/lcr_137.cpp)
add_executable(lcr_138 c++_leetode_first/lcr/lcr_138.cpp)
add_executable(LCR_139 c++_leetode_first/lcr/LCR_139.cpp)
add_executable(LCR_140 c++_leetode_first/lcr/LCR_140.cpp)
add_executable(leetcode_345 c++_leetode_first/acwing/leetcode_345.cpp)
add_executable(leetcode_350 c++_leetode_first/acwing/leetcode_350.cpp)
add_executable(leetcode_352 c++_leetode_first/acwing/leetcode_352.cpp)
add_executable(leetcode_354 c++_leetode_first/acwing/leetcode_354.cpp)
add_executable(leetcode_355 c++_leetode_first/acwing/leetcode_355.cpp)
add_executable(leetcode_357 c++_leetode_first/acwing/leetcode_357.cpp)
add_executable(leetcode_363 c++_leetode_first/acwing/leetcode_363.cpp)
add_executable(leetcode_365 c++_leetode_first/acwing/leetcode_365.cpp)
add_executable(leetcode_367 c++_leetode_first/acwing/leetcode_367.cpp)
add_executable(leetcode_368 c++_leetode_first/acwing/leetcode_368.cpp)
add_executable(leetcode_371 c++_leetode_first/acwing/leetcode_371.cpp)
add_executable(leetcode_372 c++_leetode_first/acwing/leetcode_372.cpp)
add_executable(leetcode_373 c++_leetode_first/acwing/leetcode_373.cpp)
add_executable(leetcode_374 c++_leetode_first/acwing/leetcode_374.cpp)
add_executable(leetcode_375 c++_leetode_first/acwing/leetcode_375.cpp)
